--- a/templates/grid.html
+++ b/templates/grid.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block sub_title %}메인, 그리드{% endblock %}
 {% block main %}
     <h1>Responsive Columns</h1>
     <p>Resize the browser window to see the effect.</p>
