--- a/templates/jumbotron.html
+++ b/templates/jumbotron.html
@@ -1,24 +1,24 @@
 {% extends "base.html" %}
+{% block sub_title %}점보트론{% endblock %}
 {% block main %}
-  <div class="jumbotron text-center">
-    <h1>My First Bootstrap Page</h1>
-    <p>Resize this responsive page to see the effect!</p>
-  </div>
-  
+<div class="jumbotron text-center">
+	<h1>My First Bootstrap Page</h1>
+	<p>Resize this responsive page to see the effect!</p>
+</div> 
 
-    <div class="row">
-      <div class="col-sm-4">
-        <h3>Column 1</h3>
-        <p>Lorem ipsum dolor..</p>
-      </div>
-      <div class="col-sm-4">
-        <h3>Column 2</h3>
-        <p>Lorem ipsum dolor..</p>
-      </div>
-      <div class="col-sm-4">
-        <h3>Column 3</h3>
-        <p>Lorem ipsum dolor..</p>
-      </div>
-    </div>
+<div class="row">
+	<div class="col-sm-4">
+		<h3>Column 1</h3>
+		<p>Lorem ipsum dolor..</p>
+	</div>
+	<div class="col-sm-4">
+		<h3>Column 2</h3>
+		<p>Lorem ipsum dolor..</p>
+	</div>
+	<div class="col-sm-4">
+		<h3>Column 3</h3>
+		<p>Lorem ipsum dolor..</p>
+	</div>
+</div>
 
 {% endblock %}
