--- a/templates/list.html
+++ b/templates/list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block sub_title %}{{sub_title}}{% endblock %}
 {% block main %}
     <div class="container">
         <h2>Active Item in a List Group</h2>
