--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -1,5 +1,5 @@
-.jumbotron {
-    /* background-image: url_for('static', filename='/images/ai.jpg'); */
+/* .jumbotron {
+    background-image: url_for('static', filename='/images/ai.jpg');
     background-image: url('../static/images/ai.jpg');
 	background-size: cover;
-	height: 100%; }
+	height: 100%; } */
