--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,10 @@
     <title>Web for AI App</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
     <!-- <link rel="stylesheet" href="{{url_for('static', filename='css/mystyle.css')}}"> -->
-    <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <script src="{{url_for('static', filename='js/jquery-3.5.1.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/popper.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
 </head>
 <body>
     <div class="container">
@@ -23,9 +20,7 @@
             <ul class="nav nav-pills mr-auto">
                 <li class="nav-item">
                     <a class="nav-link {% if menu.home %}active{% endif %}" href="/">
-                        <!-- <img src="{{url_for('static', filename='images/icons8-home-26.png')}}" 
-                             style="height:16px;" alt=""> --> 
-                        Home
+                        <i class="fa fa-home"></i> Home
                     </a>
                 </li>
                 <li class="nav-item">
@@ -75,5 +70,7 @@
             </span>
         </nav>
     </div>
+    {% block addition %}
+    {% endblock %}
 </body>
 </html>
