--- a/templates/regression.html
+++ b/templates/regression.html
@@ -21,7 +21,7 @@
                     <tr>
                         <td>품종</td>
                         <td>
-                            <select class="form-control" id="species"" name="species">
+                            <select class="form-control" id="species" name="species">
                                 <option value="0">Setosa</option>
                                 <option value="1" selected>Versicolor</option>
                                 <option value="2">Virginica</option>
