--- a/templates/cla_result.html
+++ b/templates/cla_result.html
@@ -16,7 +16,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" style="text-align: center;">
-                        <button type="submit" class="btn btn-primary" 
+                        <button class="btn btn-primary" 
                                 onclick="location.href='/classification'">재실행</button>
                     </td>
                 </tr>
