--- a/templates/reg_result.html
+++ b/templates/reg_result.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-2"></div>
         <div class="col-6">
-            <table class="table table-borderless">
+            <table class="table">
                 <tr>
                     <td>Sepal Length</td><td>{{iris.slen}}</td>
                 </tr>
