--- a/templates/cla_result.html
+++ b/templates/cla_result.html
@@ -12,7 +12,7 @@
                 </tr>
                 <tr style="background:yellow;">
                     <td>분류 결과</td>
-                    <td>{{label}}</td>
+                    <td>{{label}} ({{pct}}%)</td>
                 </tr>
                 <tr>
                     <td colspan="2" style="text-align: center;">
