--- a/templates/classification.html
+++ b/templates/classification.html
@@ -13,12 +13,11 @@
                                 <input type="file" class="custom-file-input" id="image" name="image">
                                 <label class="custom-file-label" for="image">업로드할 파일 선택</label>
                             </div>
-							<!-- <input type="file" id="image" name="image">						  -->
 						</td>
                     </tr>
                     <tr>
                         <td colspan="2" style="text-align: center;">
-                            <button type="submit" class="btn btn-primary">업로드</button>&nbsp;&nbsp;
+                            <button type="submit" class="btn btn-primary">실행</button>&nbsp;&nbsp;
                             <button type="reset" class="btn btn-secondary">취소</button>
                         </td>
                     </tr>
