--- a/templates/clustering.html
+++ b/templates/clustering.html
@@ -21,7 +21,7 @@
                     </tr>
                     <tr>
                         <td colspan="2" style="text-align: center;">
-                            <button type="submit" class="btn btn-primary">업로드</button>&nbsp;&nbsp;
+                            <button type="submit" class="btn btn-primary">실행</button>&nbsp;&nbsp;
                             <button type="reset" class="btn btn-secondary">취소</button>
                         </td>
                     </tr>
