--- a/templates/reg_result.html
+++ b/templates/reg_result.html
@@ -8,7 +8,8 @@
                 <tr>
                     <td>Sepal Length</td><td>{{iris.slen}}</td>
                 </tr>
-                <tr style="background:yellow;">
+                <!-- <tr style="background:yellow;"> -->
+                <tr class="alert alert-warning">
                     <td><strong>Sepal Width</strong></td>
                     <td><strong>{{iris.swid}}</strong></td>
                 </tr>
