--- a/templates/senti_result.html
+++ b/templates/senti_result.html
@@ -9,11 +9,11 @@
                     <td class="col-4">영화 감상평</td>
                     <td class="col-8">{{movie.review}}</td>
                 </tr>
-                <tr class="d-flex" style="background:yellow;">
+                <tr class="d-flex" style="background:#ffeeba;">
                     <td class="col-4"><strong>Logistic Regression</strong></td>
                     <td class="col-8" style="text-align: center;"><strong>{{movie.lr}}</strong></td>
                 </tr>
-                <tr class="d-flex" style="background:yellow;">
+                <tr class="d-flex" style="background:#ffeeba;">
                     <td class="col-4"><strong>Naive Bayes</strong></td>
                     <td class="col-8" style="text-align: center;"><strong>{{movie.nb}}</strong></td>
                 </tr>
