--- a/templates/base.html
+++ b/templates/base.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
     <!-- <link rel="stylesheet" href="{{url_for('static', filename='css/mystyle.css')}}"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="shortcut icon" href="{{url_for('static', filename='images/favicon.ico')}}">
     <script src="{{url_for('static', filename='js/jquery-3.5.1.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/popper.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 </head>
 <body>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <img src="{{url_for('static', filename='images/ai_logo1.png')}}" 
-                 style="height:60px; padding-right:50px;"
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <img src="{{url_for('static', filename='images/logo.png')}}" 
+                 style="height:50px; margin-left:50px; margin-right:100px;"
                  class="d-inline-block align-top" alt="">
             <ul class="nav nav-pills mr-auto">
                 <li class="nav-item">
@@ -64,7 +65,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center fixed-bottom">
             <span class="navbar-text">
                 Copyright &copy; 2020 C.K.Kim
