--- a/templates/clu_result.html
+++ b/templates/clu_result.html
@@ -9,9 +9,10 @@
                         <strong>PCA and K-means Clustering 실행 결과</strong>
                     </td>
                 </tr>
-                <tr style="background:yellow;">
-                    <td style="text-align: center;">군집수(K)</td>
-                    <td style="text-align: center;">{{K}}</td>
+                <!-- <tr style="background:yellow;"> -->
+                <tr class="alert alert-warning">
+                    <td style="text-align: center;"><strong>군집수(K)</strong></td>
+                    <td style="text-align: center;"><strong>{{K}}</strong></td>
                 </tr>
                 <tr>
                     <td style="text-align: center;">PCA</td>
