--- a/templates/home.html
+++ b/templates/home.html
@@ -4,21 +4,21 @@
     <div id="demo" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0"></li>
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
             <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2" class="active"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
         </ol>
     
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="{{url_for('static', filename='images/ai1.jpg')}}" alt="AI" class="d-block w-100">
+                <img src="{{url_for('static', filename='images/ai.jpg', q=1234)}}" alt="AI" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="{{url_for('static', filename='images/ml2.jpg')}}" alt="ML" class="d-block w-100">
+                <img src="{{url_for('static', filename='images/ml.jpg', q=1234)}}" alt="ML" class="d-block w-100">
             </div>
-            <div class="carousel-item active">
-                <img src="{{url_for('static', filename='images/dl_new.jpg')}}" alt="DL" class="d-block w-100">
+            <div class="carousel-item">
+                <img src="{{url_for('static', filename='images/dl.jpg', q=1234)}}" alt="DL" class="d-block w-100">
             </div>
         </div>
     
