--- a/templates/inc/clock.html
+++ b/templates/inc/clock.html
@@ -14,11 +14,11 @@
         let sec = today.getSeconds();
 
         today = year + "-" + cvt2(month) + "-" + cvt2(date) + " (" + dow[day] + ") " +
-                cvt2(hour) + ":" + cvt2(min) + ":" + cvt2(sec);
+                cvt2(hour) + ":" + cvt2(min) //+ ":" + cvt2(sec);
         document.getElementById('clock').innerHTML = today;
         t=setTimeout(function() {
             startTime();
-        }, 1000);
+        }, 1000*60);
     }
     function cvt2(i)
     {
