--- a/templates/iris_cla_result.html
+++ b/templates/iris_cla_result.html
@@ -18,8 +18,20 @@
                     <td>Petal Width</td><td>{{iris.pwid}}</td>
                 </tr>
                 <tr class="alert alert-warning">
-                    <td><strong>품종</strong></td>
-                    <td><strong>{{iris.species}}</strong></td>
+                    <td><strong>Logistic Regression</strong></td>
+                    <td><strong>{{iris.species_lr}}</strong></td>
+                </tr>
+                <tr class="alert alert-info">
+                    <td><strong>Support Vector Machine</strong></td>
+                    <td><strong>{{iris.species_svm}}</strong></td>
+                </tr>
+                <tr class="alert alert-warning">
+                    <td><strong>Decision Tree</strong></td>
+                    <td><strong>{{iris.species_dt}}</strong></td>
+                </tr>
+                <tr class="alert alert-info">
+                    <td><strong>Deep Learning</strong></td>
+                    <td><strong>{{iris.species_deep}}</strong></td>
                 </tr>
                 <tr>
                     <td colspan="2" style="text-align: center;">
